code/examples/stderr/misc_10.stderr
error[E0277]: `*const i32` cannot be sent between threads safely
  --> examples/misc_10.rs:12:5
   |
12 |       requires_send(async move {
   |       ^             ---------- within this `{async block@examples/misc_10.rs:12:19: 12:29}`
   |  _____|
   | |
13 | |         println!("{}", unsafe{*y.0})
14 | |     })
   | |______^ `*const i32` cannot be sent between threads safely
   |
   = help: within `{async block@examples/misc_10.rs:12:19: 12:29}`, the trait `Send` is not implemented for `*const i32`
note: required because it's used within this `async` block
  --> examples/misc_10.rs:12:19
   |
12 |     requires_send(async move {
   |                   ^^^^^^^^^^
note: required by a bound in `requires_send`
  --> examples/misc_10.rs:6:36
   |
 6 | fn requires_send(_f: impl Future + Send) {}
   |                                    ^^^^ required by this bound in `requires_send`

For more information about this error, try `rustc --explain E0277`.
error: could not compile `code` (example "misc_10") due to 1 previous error
